--- a/style.css
+++ b/style.css
@@ -9,12 +9,10 @@ body {
 /* Carton */
 
 .carton {
-  background-color: #f8ece8;
-  border: 2px solid black;
   border-radius: 3px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);
   padding: 2px;
-  width: 60vw;
+  width: 70vw;
   height: 40vh;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
@@ -25,8 +23,8 @@ body {
 }
 
 .fila {
-  border: 1px solid blue;
-  margin: 1px;
+  display: flex;
+  flex-direction: row;
 }
 
 .fila1 {
@@ -39,4 +37,53 @@ body {
 
 .fila3 {
   grid-area: fila3;
+}
+
+.fila.fila1 .celda:nth-child(2n-1),
+.fila.fila3 .celda:nth-child(2n-1) {
+  background-color: #b1f2ff;
+}
+
+.fila.fila2 .celda:nth-child(2n) {
+  background-color: #b1f2ff;
+}
+
+.celda {
+  width: 100%;
+  border: 1px solid black;
+  background-color: #d8f9ff;
+  display: flex;
+  justify-content: center;
+  text-align: center;
+}
+
+.celda:hover,
+.fila.fila1 .celda:nth-child(2n-1):hover,
+.fila.fila3 .celda:nth-child(2n-1):hover,
+.fila.fila2 .celda:nth-child(2n):hover {
+  background-color: #198754d1;
+}
+
+/* Botonera */
+
+.botonera {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.nuevo-carton {
+  margin: 4em;
+  padding: 1em;
+  background-color: #198754;
+  color: white;
+  font-size: large;
+  border-radius: 5px;
+  border: none;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+
+.nuevo-carton:active {
+  transform: translate(1px, 1px);
 }
