--- a/style.css
+++ b/style.css
@@ -4,6 +4,8 @@ body {
   background-color: #fbfbfb;
   display: grid;
   place-items: center;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 /* Carton */
@@ -54,7 +56,9 @@ body {
   background-color: #d8f9ff;
   display: flex;
   justify-content: center;
-  text-align: center;
+  align-items: center;
+  font-size: larger;
+  font-weight: 500;
 }
 
 .celda:hover,
