[prueba] Se resuelve bug, cuando se generaba un nuevo tablero con el boton, permitia pintar casillas que estaban vacias actualmente, pero que habian estado activas en el carton anterior.

--- a/style.css
+++ b/style.css
@@ -84,6 +84,12 @@ body {
 
 /* If active */
 
-.celda.active {
+.active {
   background-color: #f0f0f0;
+  cursor: pointer;
+}
+
+.pintada {
+  background-color: #198754d1;
+  color: #f0f0f0;
 }
